--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,32 @@
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 apply plugin: 'java'
-//apply plugin: 'jetty'
 apply plugin: 'application'
 
 mainClassName = 'hello.MainServer'
 applicationName = 'app'
-
 defaultTasks = ['clean', 'jar']
 
+apply plugin: 'java'
+
+
 dependencies {
-	compile 'com.sparkjava:spark-core:2.3'
-	compile 'org.json:json:20141113'
-	compile 'com.google.code.gson:gson:1.7.2'
+    compile 'com.sparkjava:spark-core:2.3'
+    compile 'com.google.code.gson:gson:1.7.2'
+    compile 'com.sparkjava:spark-template-mustache:1.0.0'
+    
+    compile 'org.json:json:20141113'
 	compile files("lib/db4o-8.0.249.16098-all-java5.jar")
-	compile 'com.sparkjava:spark-template-mustache:1.0.0'
-    testCompile group: 'junit', name: 'junit', version: '4.+'
+    testCompile group: 'junit', namcom.github.fakemongo.Fongoe: 'junit', version: '4.+'
+    compile 'org.slf4j:slf4j-api:1.7.12'
+    testCompile group: 'com.github.fakemongo', name: 'fongo', version: '2.1.0'
+    compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.3.0'
+    compile group: 'org.locationtech.jts', name: 'jts-core', version: '1.16.1'
+    compile group: 'net.sf.json-lib', name: 'json-lib', version: '2.4'
+    compile group: 'org.jdom', name: 'jdom', version: '2.0.2'
 }
 
 jar {
