--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ dependencies {
 	compile 'org.slf4j:slf4j-api:1.7.12'
 	compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.3.0'
     testCompile group: 'junit', name: 'junit', version: '4.+'
-    testCompile group: 'com.github.fakemongo', name: 'fongo', version: '2.1.0'
+        compile group: 'com.github.fakemongo', name: 'fongo', version: '2.1.0'
 	
 }
 
