--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,9 @@ dependencies {
 	compile 'com.sparkjava:spark-template-mustache:1.0.0'
 	compile 'org.slf4j:slf4j-api:1.7.12'
 	compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.3.0'
+    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
     testCompile group: 'junit', name: 'junit', version: '4.+'
-        compile group: 'com.github.fakemongo', name: 'fongo', version: '2.1.0'
+    compile group: 'com.github.fakemongo', name: 'fongo', version: '2.1.0'
 	
 }
 
