--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
     testCompile group: 'junit', name: 'junit', version: '4.+'
     compile group: 'com.github.fakemongo', name: 'fongo', version: '2.1.0'
+    implementation 'com.auth0:java-jwt:3.8.2'
 	
 }
 
