Comecando comunicacao entre back e front

--- a/.project
+++ b/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>antena-empresario</name>
-	<comment>Project antena-empresario created by Buildship.</comment>
+	<name>antenaEmpresa</name>
+	<comment>Project antenaEmpresa created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
